2009-09-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137793 - Indicator for view menu in app title area
	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h: Added menu indicator atom	
	* src/mb/hd-theme.h: Add #defines for new theme image
	* src/mb/hd-decor.c
	* src/mb/hd-decor.h: Added function to check for presence of menu
	  indicator atom.	
	* src/home/hd-title-bar.c
	* src/home/hd-title-bar.h: Added code to load and show menu indicator
	  atom.
	* src/home/hd-home.c
	* src/mb/hd-comp-mgr.c: Simplified title bar progress indicator code,
	  and moved into hd-comp-mgr's property listener, removing a whole
	  extra property listener function. Also added listener for menu
	  indicator atom.

2009-09-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137601 - Cannot add 5 contacts on a row to desktop
	
	* src/home/hd-home-view-layout.c: reduced padding from 16px to 13px

2009-09-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#135059 - (S3)Home view panning slower over applets than
	                       desktop
	
	* control: Requires clutter maemo49, so updated
	* src/home/hd-home.c: use clutter_grab_pointer_without_pick to let us
	grab clutter input without having clutter do costly selection for us
	each frame.

2009-09-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Apply patch from Phil Carmody to add X Terminal keyboard shortcut.

	* src/main.c: "<shift><ctrl>x" causes execution of osso-xterm.
	Fixes: NB#136949 - Feature/Info request - new 'magic keys' on the

2009-09-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#136031 [PATCH] The window closing tone is played twice on closing
		  an app from the switcher

	* src/home/hd-task-navigator.c (turnoff_effect):
	  Don't make redundant noise as it is made by hd_comp_mgr_effect() now.

2009-09-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#135948 [PATCH] 'Zombie window' seen in email

	* src/home/hd-task-navigator.c (add_nothumb):