@@ -141,3 +141,10 @@ duration_out = 450
 [subview]
 duration_in = 300
 duration_out = 300
+
+[loading_timeout]
+# This is multiplied by the load average to find the timeout
+# in seconds. before "Unable to load" is displayed.  There is
+# a minimum of 10s.
+load_average_factor = 7.5
+
